# cornucopia-lib

./: CMakeLists.txt
Cornucopia/: CMakeLists.txt
Python/: CMakeLists.txt  CornucopiaPy.cpp
